fix spacing between social icons

--- a/styles.css
+++ b/styles.css
@@ -304,7 +304,6 @@ body.interior {
 }
 
 .social-nav-icon svg {
-    width: 100%;
     height: 100%;
 }
 
